# Agentic-Smart-Health

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml
.claude/skills/add-ingestion-agent/: SKILL.md
.claude/skills/add-ingestion-agent/templates/: agent_template.py  test_agent_template.py
.github/workflows/: ai-code-review.yml
apps/agent-orchestrator/: main.py  pyproject.toml
apps/agent-orchestrator/src/agent_orchestrator/: __init__.py  pipeline.py
apps/agent-orchestrator/tests/: test_pipeline.py
apps/research-agent/: pyproject.toml
apps/research-agent/docs_output/: AI_in_clear_aligners_research_highlights_feb2026.md  resumen_AutoScientists_Self_Organizing_Agent_Teams.md  resumen_DentalGS.md  resumen_DentalSplat.md  resumen_Faith_in_AI_Can_Narrow_the_Futures_Individuals_Consider.md  resumen_Integration_of_Digital_Twin_Technology_in_Orthodontics.md  resumen_Multi-Agent_Design_Optimizing_Agents_with_Better_Prompts_and_Topologies.md  resumen_RGS_CBCT.md  resumen_digital_twin_medical_imaging.md  resumen_governing_agentic_ai.md  resumen_self_evolving_agents.md
apps/research-agent/src/: __init__.py  main.py  main_local.py  rag.py  references.py  tools.py
apps/slicer-mcp-server/: pyproject.toml
docs/architecture/: 001-digital-twin-core-schemas.md  003-verification-fault-tolerance.md  multi-agent-pipeline.md
docs/research/: 3dgs-clinical-extension.md  dataset-bite2text.md  dataset-teeth3ds.md
docs/research/01_3dgs_usage/: dentalgs  dentalsplat  nntv-gs  residual_GS
docs/research/04_governance/: practices
notebooks/: 01-vtk-3dgs-poc.ipynb  02-vtk-interactive-viewer.ipynb  03-synthetic-views-for-3dgs.ipynb  04-train-3dgs-gsplat.ipynb  README.md  exercise-point-transformer-teeth3ds.ipynb  exercise-point-transformer-teeth3ds.md
scripts/: audit_pr.py  fetch_teeth3ds.sh
tests/: test_agents.py  test_schemas.py
