[project]
name = "agentic-smart-health"
version = "0.1.0"
description = "Agentic Smart Health - Monorepo raíz"
requires-python = ">=3.13"
dependencies = [
    "agent-orchestrator",
    "core-schemas",
    "ingestion-agents",
]

[tool.uv.workspace]
members = ["apps/*", "packages/*"]

# Herramientas del agente guardián de CI (revisión estática, sin LLM).
[dependency-groups]
dev = [
    "ruff>=0.9",
    "mypy>=1.15",
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "vtk>=9.6.2",
    "numpy>=2.5.1",
    "jupyter>=1.1.1",
    "ipykernel>=7.3.0",
]

[tool.pytest.ini_options]
testpaths = ["packages", "apps", "tests"]

[tool.uv.sources]
agent-orchestrator = { workspace = true }
core-schemas = { workspace = true }
ingestion-agents = { workspace = true }

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [".venv", "data", "notebooks"]

[tool.ruff.lint]
# E/W pycodestyle, F pyflakes, I isort, UP pyupgrade, B bugbear.
select = ["E", "W", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.13"
ignore_missing_imports = true
follow_imports = "silent"
warn_unused_ignores = false
exclude = ['^\.venv/', '^data/', '^notebooks/']
