[project]
name = "research-agent"
version = "0.1.0"
description = "Agente de investigación autónomo que busca, ingiere y resume literatura científica usando RAG"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.116.0",
    "ollama>=0.6.2",
    "pydantic>=2.13.4",
    "pypdf>=6.14.2",
    "python-dotenv>=1.2.2",
    "qdrant-client[fastembed]>=1.18.0",
    "rich>=15.0.0",
]
